add profile parameter to 'items' links
Also hide internal formats, currently only `application/vnd.policy.attributes`. These were identified by the convention that `getContent()` returns `null`. This has been replaced by an explicit flag in each format.

Closes #1551